:memo: [#14] imporved the documentation for the api endpoints
